A flavor for post-war brits revolution

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9152,6 +9152,9 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_england.263.t: "British capture Fao"
  ww1_england.263.d: "Distressing news comes from the Fao Peninsula. British forces launched a surprise landing operation and successfully captured the Fao Fortress. Despite the valiant efforts of the defenders, the enemy's superior numbers and preparation overwhelmed the positions. The garrison deserted after their main officer, Captain Ibn Abdullah, was killed."
  ww1_england.263.a: "We must reinforce Mesopotamia!"
+ ww1_england.264.t: "[GetYear] General Election and the Cabinet Crisis"
+ ww1_england.264.d: "As a result of the Great War, the British Empire lost its dominance and imperial order. The Cabinet resigned in disgrace, and no party won a majority in the general election promised immediately after the Armistice. Moreover, extremist political forces that rejects even parliamentarism are beginning to find a voice, and the people seem to be stirred."
+ ww1_england.264.a: "Keep calm and carry on..."
 
  #the following events relate to Egypt and the British Collapse, and don't all directly relate to Britain.
  ww1_england.52.t: "Egypt breaks from our rule!"
