--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -11600,11 +11600,12 @@ FRA_leave_MOR: "Leave Morocco"
 
  # the Locarno Treaties
  interwar_news.13.t: "The Locarno Treaties"
- interwar_news.13.desc: "The Great War Western European Allied powers and the new states of Central and Eastern Europe sought to secure the post-war territorial settlement, and return normalizing relations with defeated Germany. It also stated that Germany would never go to war with the other countries."
+ interwar_news.13.desc: "France, Germany and some Western European countries came together to confirm the Peace of Versailles after the Great War. Representatives convened in Locarno, Switzerland, to negotiate a treaty and agreed to a number of provisions for peace, including allowing Germany to join the League of Nations and demilitarising the Rhineland. In effect, this means that Germany, diplomatically isolated since the previous treaty, has returned with a sense of diplomatic normalcy. Will this be the peace of our time?"
  interwar_news.13.a: "Peace has been secured."
  interwar_news.13.b: "Time to restore everything with the good."
  interwar_news.13.c: "This won't last long."
  interwar_news.13.d: "Hopefully we will never witness the another Great War."
+ interwar_locarno_treaties: "The Locarno Treaties has been signed"
 
  #Iraq revolt
  interwar_news.14.t: "Iraqi Revolt against the [FROM.GetAdjective]"
