Tweak Mosul cession

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -12685,9 +12685,11 @@ FRA_leave_MOR: "Leave Morocco"
  ww1_sykes_picot.3.t: "Sykes-Picot Agreement"
  ww1_sykes_picot.3.d: "A secret treaty is signed between [ENG.GetNameDef] and [FRA.GetNameDef], with assent from other members, to define their mutually agreed spheres of influence and control in an eventual partition of [TUR.GetNameDef]. The agreement is based on the premise that the Triple Entente would achieve success in defeating [TUR.GetNameDef] during the Great War and formed part of a series of secret agreements contemplating its partition."
  ww1_sykes_picot.3.a: "Well solved."
- ww1_sykes_picot.4.t: "Question on Mosul"
- ww1_sykes_picot.4.d: "Signing the Sykes-Pico Agreement, it is needed to determine which side Mosul should belong in the process of dividing the Middle East territories of [TUR.GetNameDef] into our own spheres of influence."
- ww1_sykes_picot.4.a: "Mosul belongs to the British sphere of influence."
+ ww1_sykes_picot.4.t: "Mosul Cession"
+ ww1_sykes_picot.4.d: "We secretly negotiated with Britain during the Great War to partition the Middle East into two spheres of influence; Mosul, in the northern Mesopotamia, was supposed to come under our influence, but [ROOT.GetLeader] wants Britain to allow France to take decisive action against the German Rhineland and the Arab Kingdom of Syria in exchange for Mosul coming under British control."
+ ww1_sykes_picot.4.a: "They'll like it."
+ ww1_sykes_picot.6.d: "[FRA.GetLeader] government secretly proposed the cession of Mosul, in northern Mesopotamia, to our control, as stipulated in the Sykes-Picot Treaty. In return, France demanded support for the occupation of the Rhineland and the withdrawal of support for the Arab Kingdom of Syria."
+ ww1_sykes_picot.6.a: "Yes, why not?"
  
  # KHIVA
  ww1_khiva.1.t: "Khivan Revolution"
