--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -3212,7 +3212,7 @@
  AFA_democratic_DEF:0 "the Afar Republic"
  AFA_communism:0 "Revolutionary Democratic Union of Afar"
  AFA_communism_DEF:0 "the Revolutionary Democratic Union of Afar"
- AFA_neutrality:0 "Sultanate of Aussa"
+ AFA_neutrality:0 "Aussa"
  AFA_neutrality_DEF:1 "the Sultanate of Aussa"
  
  ### Debug Tag ###
