Purchase Foreign Arms Mechanic

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -32,6 +32,17 @@
 
  solidify_control: "Solidify Control"
  solidify_control_desc: "Some tactful use of political power here and some resources there and we will remove our political obstacles; we may not be able to get rid of all of them, but even getting rid of some will clear our path and improve our political power in the long run."
+ 
+ # Feudal Decisions
+ FEU_purchase_french_arms:0 "Purchase [FRA.GetFlag] French Arms"
+ FEU_purchase_british_arms:0 "Purchase [ENG.GetFlag] British Arms"
+ FEU_purchase_german_arms:0 "Purchase [GER.GetFlag] German Arms"
+ FEU_purchase_french_support_equipment:0 "Purchase [FRA.GetFlag] French Support Equipment"
+ FEU_purchase_british_support_equipment:0 "Purchase [ENG.GetFlag] British Support Equipment"
+ FEU_purchase_german_support_equipment:0 "Purchase [GER.GetFlag] German Support Equipment"
+ FEU_purchase_french_artillery:0 "Purchase [FRA.GetFlag] French Artillery"
+ FEU_purchase_british_artillery:0 "Purchase [ENG.GetFlag] British Artillery"
+ FEU_purchase_german_artillery:0 "Purchase [GER.GetFlag] German Artillery"
 
  rus_demobilize_army_tt:0 "The §Y[RUS.getFlag][RUS.getAdjective]§! Army will Demobilize Itself in random states progressively."
  TGWR_under_max_battalions_limit:0 "§Y[ROOT.getFlag][ROOT.getAdjective]§! army is above max Battalion limit."
