--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -92,6 +92,10 @@
  SAU_JBS_Unity_1: "Unification Process"
  superior_enemy:0 "Superior Enemy"
  superior_enemy_desc:0 "Army experience and equipment of our enemies are far ahead of ours."
+ # Feudal Tree Ideas
+ pro_entente_diplomatic_effort:0 "Pro-Entente Diplomatic Efforts"
+ pro_cp_diplomatic_effort:0 "Pro-Central Powers Diplomatic Efforts"
+
  albanian_shipyard:0 "Albanian Shipyard"
  afne:0 "AFNE"
  astilleros_alianza_sa:0 "Astilleros Alianza S.A."
