"Our Place in the World" Tree finished

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -458,7 +458,9 @@
  FEU_draft_a_constitution:0 "Draft a Constitution"
 
  FEU_our_place_in_the_world:0 "Our Place in the World"
+ FEU_our_place_in_the_world_desc:0 "The [DAR.GetAdjectiveCap] people have a complex history with deep-rooted traditions. It is imperative for a great nation like ours to assert its position in the world."
  FEU_secure_our_independence:0 "Secure our Independence"
+ FEU_secure_our_independence_desc:0 "As a minor nation, our independence is often challenged by foreign powers for their own interests. Only through sustained diplomatic efforts will we be able to secure our nation's future."
  FEU_secure_entente_support:0 "Secure Entente Support"
  FEU_british_delegation:0 "British Delegation"
  FEU_british_naval_teachings:0 "British Naval Teachings"
