--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -44,6 +44,16 @@
  FEU_purchase_british_artillery:0 "Purchase [ENG.GetFlag] British Artillery"
  FEU_purchase_german_artillery:0 "Purchase [GER.GetFlag] German Artillery"
 
+ FEU_diplomatic_effort:0 "Diplomatic Efforts"
+ FEU_diplomatic_effort_to_france:0 "Diplomatic Effort to [FRA.GetFlag] [FRA.GetNameDef]"
+ FEU_diplomatic_effort_to_britain:0 "Diplomatic Effort to [ENG.GetFlag] [ENG.GetNameDef]"
+ FEU_diplomatic_effort_to_italy:0 "Diplomatic Effort to [ITA.GetFlag] [ITA.GetNameDef]"
+ FEU_diplomatic_effort_to_russia:0 "Diplomatic Effort to [RUS.GetFlag] [RUS.GetNameDef]"
+ FEU_diplomatic_effort_to_ussr:0 "Diplomatic Effort to [SOV.GetFlag] [SOV.GetNameDef]"
+ FEU_diplomatic_effort_to_germany:0 "Diplomatic Effort to [GER.GetFlag] [GER.GetNameDef]"
+ FEU_diplomatic_effort_to_austria_hungary:0 "Diplomatic Effort to [AUH.GetFlag] [AUH.GetNameDef]"
+ FEU_diplomatic_effort_to_spain:0 "Diplomatic Effort to [SPR.GetFlag] [SPR.GetNameDef]"
+
  rus_demobilize_army_tt:0 "The §Y[RUS.getFlag][RUS.getAdjective]§! Army will Demobilize Itself in random states progressively."
  TGWR_under_max_battalions_limit:0 "§Y[ROOT.getFlag][ROOT.getAdjective]§! army is above max Battalion limit."
  RUS_demobilizing_army_timer:0 "Army Demobilization"
