--- a/localisation/russian/countries_l_russian.yml
+++ b/localisation/russian/countries_l_russian.yml
@@ -3212,7 +3212,7 @@
  AFA_democratic_DEF:0 "Афарская Республика"
  AFA_communism:0 "Революционно-Демократический Союз Афара"
  AFA_communism_DEF:0 "Революционно-Демократический Союз Афара"
- AFA_neutrality:0 "Султанат Аусса"
+ AFA_neutrality:0 "Аусса"
  AFA_neutrality_DEF:1 "Султанат Аусса"
  
  ### Debug Tag ###
