--- a/localisation/russian/parties_l_russian.yml
+++ b/localisation/russian/parties_l_russian.yml
@@ -894,8 +894,8 @@
  TUR_socialist_party_long:0 "Османская Социалистическая Партия"
  TUR_democratic_party:0 "ПСС"
  TUR_democratic_party_long:0 "Партия Свободы и Согласия"
- TUR_saviour_officer:0 "Офицеры-Освободители"
- TUR_saviour_officer_long:0 "Офицеры-Освободители"
+ TUR_saviour_officer:0 "Офицеры-Cпасители"
+ TUR_saviour_officer_long:0 "Офицеры-Cпасители"
  TUR_national_movement_party:0 "Турецкое Национальное Движение"
  TUR_kemalist_party:0 "РНП"
  TUR_kemalist_party_long:0 "Республиканская Народная Партия"
