--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5328,8 +5328,11 @@ ROM_the_moderating_influence:0 "The Moderating Influence"
 ROM_the_moderating_influence_desc:0 ""
 ROM_the_new_constitution:0 "Hostile Takeover of the PNL"
 ROM_the_new_constitution_desc:0 ""
-ROM_a_unifying_figure_head:0 "A Unifying Figurehead"
+ROM_a_unifying_figure_head:0 "Pursue Full Male Suffrage"
 ROM_a_unifying_figure_head_desc:0 ""
+ ww1_romania.56.t:0 "Internal Coup of the PNL"
+ ww1_romania.56.d:0 "The PNL has long had internal divisions, mainly between those who disagree on just how far reform needs to go. Constantin Stere has long been a proponent of an extensive commitee on land reform, full male suffrage, a new constitution, and has even flirted with the idea of giving Women the right to vote as well. On the contrary, Ion Bratianu, the current leader of the PNL, has given lip service to these issues at best. With a new PNL government recently being installed, a battle of power began behind the scenes.\n\nIt seems that Stere has won this conflict, as today the PNL forced Bratianu to stand down in favor of Stere at risk of a party splinter. With this, the King has accepted Bratianu's resignation and Stere will now have to see if he can live up to his promises."
+ ww1_romania.56.a:0 "Let's get action!"
 ROM_the_house_always_wins:0 "The House Always Wins"
 ROM_the_house_always_wins_desc:0 ""
 ROM_mandatory_insurance:0 "Mandatory Insurance"
