--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5493,7 +5493,7 @@ ROM_form_the_fppr:0 "Form the FPPR"
 ROM_form_the_fppr_desc:0 ""
 ROM_deal_with_the_liberal_king:0 "Deal With the Liberal King"
 ROM_deal_with_the_liberal_king_desc:0 "The last man that can threaten our power is the king himself. Aligned with the liberals, King Ferdinand clearly cannot be trusted! He would take any opprotunity he could get to depose us for his prefered party, the PNL - or whats left of it. With parliament disbanded, Carp himself will assume responsibility for writing a new constitution, one which will protect Romanian democracy from the king by removing his ability to dismiss governments."
-deal_with_lib_king.tt:0 "Gets event '§YThe Carp Constitution§!'\nDisables the decision category §Y'The Kings Country§!' and all relating decisions and events. The king will no longer be able to §Rdismiss§! our government, and his opinion of us will no longer effect our §YPolitical Power§! or §YStability§!"
+deal_with_lib_king.tt:0 "Disables the decision category §Y'The Kings Country§!' and all relating decisions and events. The king will no longer be able to §Rdismiss§! our government, and his opinion of us will no longer effect our §YPolitical Power§! or §YStability§!"
 ROM_consolidate_the_dictatorship:0 "Take the Mask Off"
 ROM_guide_parliament:0 "Intra-Party Democracy"
 
