--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9329,6 +9329,7 @@ ROM_barbu_delavrancea:0 "Barbu Delavrancea"
 ROM_constantin_arion:0 "Constantin Arion"
 ROM_constantin_motru:0 "Constantin Montru"
 sociologist:0 "Sociologist"
+ROM_constantin_stere:0 "Constantin Stere"
 ROM_second_world_flight:0 "Second Flight in the World"
  ROM_titu_maiorescu:0 "Titu Maiorescu"
  ROM_kings_country_category_desc:0 "While a constitutional monarchy with quite strong seperations of power, the constitution does delegate many powers to the king. Romanias king can outright dismiss governments as well as dissolve parliament in times of crisis. While very rarely used, while also holding huge influence over the opinions of Romanias public and politicians. If the king is angered by our government too much, they may support the opposition or even resort to §Rextreme measures§!. In addition, if the king approves of our government, they may use their political clout to help push our agenda.\n\nThe king's opinion can very from the following:\n§RVery negative§!, which gives us:\nPolitical Power Gain: §R-20%§!\nStability: §R-12.00%§!\n§ONegative§!, which gives us:\nPolitical Power Gain: §R-10%§!\nStability: §R-6.00%§!\n§YNeutral§!, which gives us:\nPolitical Power Gain: §Y+0%§!\nStability: §Y+0.00%§!\n§7Positive§!, which gives us:\nPolitical Power Gain: §G+10%§!\nStability: §G+6.00%§!\n§GVery positive§!, which gives us:\nPolitical Power Gain: §G+20%§!\nStability: §G+12.00%§!\n\nThe king's current opinion of the government is [KingsOpinionRomania]"
