--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -7715,7 +7715,7 @@ FRA_ww1_cartel_des_droites_desc:0 "The union of the French right is a reality wh
 
  FRA_ww1_seek_rapprochement_with_spain:0 "Seek Rapprochement with Spain"
  FRA_ww1_seek_rapprochement_with_spain_desc:0 "Our new political alignment could convince Spain, very weakened by its recent conflicts against the United States, to align itself with us. This ally would be a godsend for the security of our southern front in Africa and the demographic reinforcement of our armies."
-
+gala_galaction:0 "Gala Galaction"
  FRA_ww1_british_friendship:0 "British Friendship"
  FRA_ww1_british_friendship_desc:0 "Despite our history, which is opposed by everything, Great Britain remains one of our rare strong allies in the face of German hegemony. We must strengthen our ties with her and secure our alliance."
 
