--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -5879,6 +5879,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TRS_give_citizenship_to_jews_desc:0 "Numerous Jews living within our empire are not a citizen of our empire. In an effort to integrate Jews in our empire, we can offer jews Ottoman citizenship."
  TUR_mass_education:0 "Mass Education in [TUR_vilayet_name_list]"
  TUR_mass_education_desc:0 "Integrating a region goes through indoctrinating its young minds. As we spread pro-Ottoman education in [TUR_vilayet_name_list], its citizens will feel themselves as a part of the empire."
+ TUR_mass_education_tt:0 "Modify §YCrippling Illiteracy§! by\n£political_power_cost_texticon  Daily Political Power Cost: §G-0.02§!\n£research_speed_texticon  Research Speed: §G+2.00%§!\n\n"
  TUR_construction_endeavours:0 "Construction Endeavours in [TUR_vilayet_name_list]"
  TUR_construction_endeavours_desc:0 "State of the Syrian provinces are neglected nonetheless. As we sponsor various construction projects such as road extension, boulevard construction and putting new water wheels, we'll be able to attain control in [TUR_vilayet_name_list]."
  TRS_purchase_damascus_aleppo_railway:0 "Purchase Damascus-Aleppo Railway"
@@ -5976,6 +5977,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_allign_with_the_egyptian_clergy_desc:0 "Muslim clergy and imams in the Egyptian society oppose Egyptian conflict against the legitimate Ottoman Caliphate. By alligning with the clergy, we can use religion to influence the common people"
  TUR_allign_with_the_egyptian_conscripts:0 "Allign with the Egyptian Conscripts"
  TUR_allign_with_the_egyptian_conscripts_desc:0 "Many low ranking conscripts within the Egyptian armed forces oppose Egyptian war against our empire. By alligning with the Egyptian conscripts, we can sabotage the Egyptian war effort."
+ TRS_forced_labor_abolished:0 "Has not selected §YAbolish Forced Labor§!"
+ TRS_utilize_forced_labor_tt: "Modify §YCemâl's Syria§! by\n£construction_speed_texticon  Construction Speed: §R-20.00%§!\n£factory_output_texticon  Factory Output: §R-20.00%§!\n\n"
+ TRS_utilize_forced_labor_tt2: "Modify §YCemâl's Syria§! by\n£construction_speed_texticon  Construction Speed: §G+20.00%§!\n£factory_output_texticon  Factory Output: §G+20.00%§!\n\n"
 
  TUR_decision_cost_minority:0 "[TUR.turkeyminoritycost]"
  TUR_decision_cost_minority_blocked:0 "[TUR.turkeyminoritycostblocked]"
