--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4655,6 +4655,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman_syria.32.a:0 "Accpet Abdülhalik's governorship."
  ottoman_syria.32.b:0 "Force our candidate, at whatever cost."
  ottoman_syria.32.tt:0 "Modify §YCemâl's Syria§! by\n£political_power_texticon  Political Power Gain: §R-3%§!\n\n"
+ ottoman_syria.34.tt:0 "Modify §YCrippling Illiteracy§! by\n£population_texticon  Monthly Population: §G+7.0%§!\n£research_speed_texticon  Research Speed: §G+5.00%§!\n\n"
 
  ottoman..120.t:0 "Sects Mobilize"
  ottoman..120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
