--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -891,10 +891,14 @@
  TUR_investment_to_ottomans:0 "Investment to [TUR.GetName]"
  TUR_crippling_illiteracy:0 "Crippling Illiteracy"
  TUR_crippling_illiteracy_desc:0 "Our empire is mostly rural and a large part of the society has no access to education. Even those who has, due to religious indoctrination western science is viewed as heresy. Because of our insanely high illiteracy rates, we have difficulties with research and produce modern technology."
- TUR_crippling_illiteracy_socialist3:0 "Socialist Education"
- TUR_crippling_illiteracy_socialist3_desc:0 "Through our monopoly on the education, we can raise ore politically loyal generations."
- TUR_crippling_illiteracy_military4:0 "Military Research"
- TUR_crippling_illiteracy_military4_desc:0 "Instead of educating illiterate masses, our state shall focus on promoting military research."
+ TUR_crippling_illiteracy_dm:0 "£pol_idea  Crippling Illiteracy"
+ TUR_crippling_illiteracy_dm_desc:0 "Our empire is mostly rural and a large part of the society has no access to education. Even those who has, due to religious indoctrination western science is viewed as heresy. Because of our insanely high illiteracy rates, we have difficulties with research and produce modern technology."
+ TRS_crippling_illiteracy_tt:0 "[TRS_crippling_illiteracy_political_power_cost][TRS_crippling_illiteracy_monthly_population][TRS_crippling_illiteracy_conscription_factor][TRS_crippling_illiteracy_research_speed_factor][TRS_crippling_illiteracy_industrial_capacity_factory]"
+ TRS_crippling_illiteracy_political_power_cost_yes:0 "£political_power_cost_texticon  Daily Political Power Cost: [?TUR_ci_political_power_cost|-=%%]\n"
+ TRS_crippling_illiteracy_monthly_population_yes:0 "£population_texticon  Monthly Population: [?TUR_ci_monthly_population|1+=%]\n"
+ TRS_crippling_illiteracy_conscription_factor_yes:0 "£manpower_texticon  Recruitable Population Factor: [?TUR_ci_conscription_factor|0+%]\n"
+ TRS_crippling_illiteracy_research_speed_factor_yes:0 "£research_speed_texticon  Research Speed: [?TUR_ci_research_speed_factor|=+%]\n"
+ TRS_crippling_illiteracy_industrial_capacity_factory_yes:0 "£factory_output_texticon  Factory Output: [?TUR_ci_industrial_capacity_factory|=+%]\n"
  TUR_guaranteed_freedom_of_speech:0 "Guaranteed Freedom of Speech"
  TUR_guaranteed_human_right:0 "Guaranteed Human Rights"
  TUR_limited_speech:0 "Restricted Personal Rigths and Freedoms"
@@ -2334,7 +2338,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  #CHINA/QING
  unequal_treaties:0 "Unequal Treaties"
  unequal_treaties_desc:0 "In recent decades our country has survived by signing unfair and unreasonable treaties with foreign powers, but at some point we must end this and take back our economic sovereignty."
- unequal_treaties_dm:0 "£pol_idea Unequal Treaties"
+ unequal_treaties_dm:0 "£pol_idea  Unequal Treaties"
  unequal_treaties_dm_desc:0 "In recent decades our country has survived by signing unfair and unreasonable treaties with foreign powers, but at some point we must end this and take back our economic sovereignty."
  unequal_treaties_tt:0 "Consumer Goods Factories: [?unequal_treaties_consumer_goods|Y0%]\nConstruction Speed: §G+15.00%§!\nResearch Speed: [?unequal_treaties_research_speed|+2%]\nFactory Output: §G+15.00%§!\nDockyard Output: §G+15.00%§!\nResources to Market: [?unequal_treaties_resources_to_market|Y0=%]\nCivilian intelligence to others: §R+40.0%§!\nNavy intelligence to others: §R+20.0%§!\n§YInfrastructure§! construction speed: [?unequal_treaties_infrastructure|+2%]\n§YMilitary Factory§! construction speed: [?unequal_treaties_military_factory|+2%]\n§YCivilian Factory§! construction speed: [?unequal_treaties_civilian_factory|+2%]\n§YDockyard§! construction speed: [?unequal_treaties_dockyard|+2%]"
  dont_have_unequal_treaties_tt:0 "Does not have trade law §YUnequal Treaties§!"
