--- a/localisation/english/equip_air_l_english.yml
+++ b/localisation/english/equip_air_l_english.yml
@@ -35,7 +35,7 @@
  scout_plane_equipment_2_desc:0 "By developing dedicated planes for aerial surveillance and long-range reconnaissance, we ensure that we gain and maintain an accurate picture of our opponent's intentions and capabilities."
  scout_plane_equipment_3:0 "Reconnaissance Plane III"
  scout_plane_equipment_3_desc:0 "By developing dedicated planes for aerial surveillance and long-range reconnaissance, we ensure that we gain and maintain an accurate picture of our opponent's intentions and capabilities."
- scout_plane_equipment_3_short:0 "Recon Plane II"
+ scout_plane_equipment_3_short:0 "Recon Plane III"
  aerial_bombs:0 "Aerial Bombs"
  aerial_bombs_desc:0 "A bomb can be loaded onto aeroplanes so that it can be dropped from the above and hit a ground target. Bombs can now be attached to the fuselage instead of being hand-thrown by the crew."
  synchronizer:0 "Synchronizer"
