--- a/localisation/russian/equipment_l_russian.yml
+++ b/localisation/russian/equipment_l_russian.yml
@@ -24,7 +24,7 @@
  sh_battleship_desc:0 "Самый большой капитальный корабль с самыми большими пушками и самой прочной броней, которую можно купить за деньги. Такая дорогостоящая инвестиция заслуживает надлежащей поддержки меньших экранирующих судов."
  light_airframe:0 "Легкий планер"
  light_airframe_desc:0 "Легкие самолеты на основе планера"
- medium_airframe:0 "Средний Планер"
+ medium_airframe:0 "Средний планер"
  medium_airframe_desc:0 "Самолеты на базе среднего планера"
  heavy_airframe:0 "Тяжелый планер"
  heavy_airframe_desc:0 "Тяжелые самолеты на основе планера"
@@ -52,7 +52,9 @@
  EQUIPMENT_SCREEN:0 "Монитор"
  EQUIPMENT_CONVOY:0 "Торговый конвой"
  EQUIPMENT_AIR_FIGHTER:0 "Истребитель"
+ EQUIPMENT_FIGHTER:0 "Истребитель"
  EQUIPMENT_AIR_CAS:0 "Штурмовик"
+ EQUIPMENT_CAS:0 "Штурмовик"
  EQUIPMENT_INTERCEPTOR:0 "Перехватчик"
  EQUIPMENT_SCOUT_PLANE:0 "Самолет-разведчик"
  EQUIPMENT_TACTICAL_BOMBER:0 "Легкий бомбардировщик"
@@ -84,6 +86,10 @@
  UNIT_GENERIC_NAME_ITA:0 "$NR$a $NAME$"
  UNIT_GENERIC_NAME_JAP:0 "$NR$ $NAME$"
  UNIT_GENERIC_NAME_SOV:0 "$NR$ya $NAME$"
+ EQUIPMENT_VERSION_0_SHIP: ""
+ EQUIPMENT_VERSION_0_TANK: ""
+ EQUIPMENT_VERSION_0_PLANE: ""
+ 
  GER_EQUIPMENT_VERSION_1:0 "A"
  GER_EQUIPMENT_VERSION_2:0 "B"
  GER_EQUIPMENT_VERSION_3:0 "C"
@@ -100,6 +106,41 @@
  GER_EQUIPMENT_VERSION_14:0 "N"
  GER_EQUIPMENT_VERSION_15:0 "O"
  GER_EQUIPMENT_VERSION_16:0 "P"
+ 
+ GER_EQUIPMENT_VERSION_1_TANK:0 "Ausf. A"
+ GER_EQUIPMENT_VERSION_2_TANK:0 "Ausf. B"
+ GER_EQUIPMENT_VERSION_3_TANK:0 "Ausf. C"
+ GER_EQUIPMENT_VERSION_4_TANK:0 "Ausf. D"
+ GER_EQUIPMENT_VERSION_5_TANK:0 "Ausf. E"
+ GER_EQUIPMENT_VERSION_6_TANK:0 "Ausf. F"
+ GER_EQUIPMENT_VERSION_7_TANK:0 "Ausf. G"
+ GER_EQUIPMENT_VERSION_8_TANK:0 "Ausf. H"
+ GER_EQUIPMENT_VERSION_9_TANK:0 "Ausf. I"
+ GER_EQUIPMENT_VERSION_10_TANK:0 "Ausf. J"
+ GER_EQUIPMENT_VERSION_11_TANK:0 "Ausf. K"
+ GER_EQUIPMENT_VERSION_12_TANK:0 "Ausf. L"
+ GER_EQUIPMENT_VERSION_13_TANK:0 "Ausf. M"
+ GER_EQUIPMENT_VERSION_14_TANK:0 "Ausf. N"
+ GER_EQUIPMENT_VERSION_15_TANK:0 "Ausf. O"
+ GER_EQUIPMENT_VERSION_16_TANK:0 "Ausf. P"
+ 
+ GER_EQUIPMENT_VERSION_0_SHIP:0 "Klasse"
+ GER_EQUIPMENT_VERSION_1_SHIP:0 "A Klasse"
+ GER_EQUIPMENT_VERSION_2_SHIP:0 "B Klasse"
+ GER_EQUIPMENT_VERSION_3_SHIP:0 "C Klasse"
+ GER_EQUIPMENT_VERSION_4_SHIP:0 "D Klasse"
+ GER_EQUIPMENT_VERSION_5_SHIP:0 "E Klasse"
+ GER_EQUIPMENT_VERSION_6_SHIP:0 "F Klasse"
+ GER_EQUIPMENT_VERSION_7_SHIP:0 "G Klasse"
+ GER_EQUIPMENT_VERSION_8_SHIP:0 "H Klasse"
+ GER_EQUIPMENT_VERSION_9_SHIP:0 "I Klasse"
+ GER_EQUIPMENT_VERSION_10_SHIP:0 "J Klasse"
+ GER_EQUIPMENT_VERSION_11_SHIP:0 "K Klasse"
+ GER_EQUIPMENT_VERSION_12_SHIP:0 "L Klasse"
+ GER_EQUIPMENT_VERSION_13_SHIP:0 "M Klasse"
+ GER_EQUIPMENT_VERSION_14_SHIP:0 "N Klasse"
+ GER_EQUIPMENT_VERSION_15_SHIP:0 "O Klasse"
+ GER_EQUIPMENT_VERSION_16_SHIP:0 "P Klasse"
 
  JAP_EQUIPMENT_VERSION_1:0 "Kai A"
  JAP_EQUIPMENT_VERSION_2:0 "Kai B"
@@ -182,6 +223,20 @@
  USA_EQUIPMENT_VERSION_11:0 "A9A2"
  USA_EQUIPMENT_VERSION_12:0 "A9A3"
  USA_EQUIPMENT_VERSION_13:0 "A9A4"
+ 
+ USA_EQUIPMENT_VERSION_1_PLANE:0 "1"
+ USA_EQUIPMENT_VERSION_2_PLANE:0 "2"
+ USA_EQUIPMENT_VERSION_3_PLANE:0 "3"
+ USA_EQUIPMENT_VERSION_4_PLANE:0 "4"
+ USA_EQUIPMENT_VERSION_5_PLANE:0 "5"
+ USA_EQUIPMENT_VERSION_6_PLANE:0 "6"
+ USA_EQUIPMENT_VERSION_7_PLANE:0 "7"
+ USA_EQUIPMENT_VERSION_8_PLANE:0 "8"
+ USA_EQUIPMENT_VERSION_9_PLANE:0 "9"
+ USA_EQUIPMENT_VERSION_10_PLANE:0 "10"
+ USA_EQUIPMENT_VERSION_11_PLANE:0 "11"
+ USA_EQUIPMENT_VERSION_12_PLANE:0 "12"
+ USA_EQUIPMENT_VERSION_13_PLANE:0 "13"
 
  ENG_EQUIPMENT_VERSION_1:0 "Mk. I"
  ENG_EQUIPMENT_VERSION_2:0 "Mk. II"
@@ -665,3 +720,4 @@
  railway_gun_equipment_desc:0 "Тяжелое орудие, установленная на железнодорожном вагоне для транспортировки."
  railway_gun_desc:0 "Железные дороги дают возможность перемещать тяжелые орудия далеко вглубь суши с разумной скоростью, что позволяет нам обстреливать вражеские позиции с большого расстояния и с хорошим эффектом."
  railway_gun_equipment_1:0 "Железнодорожное орудие"
+ 
