--- a/localisation/russian/ww1_equip_air_l_russian.yml
+++ b/localisation/russian/ww1_equip_air_l_russian.yml
@@ -9,6 +9,7 @@
  airship_bomber_equipment_1:0 "Жесткий дирижабль-бомбардировщик I"
  airship_bomber_equipment_2:0 "Жесткий дирижабль-бомбардировщик II"
  airship_bomber_equipment_3:0 "Жесткий дирижабль-бомбардировщик III"
+ mio_cat_eq_airships: "Дирижабли"
  
 #GER - GErmany 
  GER_scout_plane_equipment_1:0 "Etrich Taube" #1910
