--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -7718,7 +7718,7 @@ FRA_ww1_cartel_des_droites_desc:0 "The union of the French right is a reality wh
 gala_galaction:0 "Gala Galaction"
  FRA_ww1_british_friendship:0 "British Friendship"
  FRA_ww1_british_friendship_desc:0 "Despite our history, which is opposed by everything, Great Britain remains one of our rare strong allies in the face of German hegemony. We must strengthen our ties with her and secure our alliance."
-
+ROM_cooperative_agriculture_idea:0 "Cooperative Agriculture"
  FRA_ww1_support_serbia:0 "Support Serbia"
  FRA_ww1_support_serbia_desc:0 "The Austro-Hungarian Empire has shown clear signs of hostility and aggression towards our only cordial partner in the Balkans. Let us strengthen our ties with the Serbs."
 
