imma eat dinner

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -7721,10 +7721,11 @@ gala_galaction:0 "Gala Galaction"
 ROM_cooperative_agriculture_idea:0 "Cooperative Agriculture"
  FRA_ww1_support_serbia:0 "Support Serbia"
  FRA_ww1_support_serbia_desc:0 "The Austro-Hungarian Empire has shown clear signs of hostility and aggression towards our only cordial partner in the Balkans. Let us strengthen our ties with the Serbs."
-
+ROM_encourage_factory_jobs:0 "Encourage Factory Jobs"
  FRA_ww1_serbian_exiled_force:0 "Serbian Exiled Force"
  FRA_ww1_serbian_exiled_force_desc:0 "Despite the capitulation of their state, a large portion of the Serbian military has refused to surrender. Consequently, it is possible for us to bring in, and then equip, thousands of motivated and experienced men."
-
+ROM_pander_to_the_middle_class:0 "Pander to the Middle Class"
+ROM_embrace_modernization:0 "Embrace Modernization"
  FRA_ww1_support_napoleon_V:0 "Bonapartist Tide"
  FRA_ww1_support_napoleon_V_desc:0 "France experienced its greatest hour of glory during the reign of Emperor Napoleon I. This era took us to Germany, Italy and even Russia. We must find this kind of strong leader by supporting the Bonaparte house."
 
