--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -922,6 +922,8 @@
  CHI_establish_provisional_gov:0 "Establish the Prov. Gov."
  CHI_establish_provisional_gov_desc:0 "The revolution is taking place without a unified leadership in each province. The victory of the revolution requires the establishment and leadership of a single political entity. Mr. Sun Yat-sen, who has been calling for a republican revolution abroad for the past few years, would be an appropriate leader."
  CHI_establish_provisional_gov_tt:0 "Yuan Shikai would be upset, and we'll need to find another compromise."
+ CHI_tongmenghui_cabinet:0 "Tongmenghui Cabinet"
+ CHI_tongmenghui_cabinet_desc:0 "The revolution was led by the Tongmenghui anyway, and it's no surprise that they is overwhelmingly represented in the government. Under the Provisional Constituion, the government will be a cabinet responsibility system, with the head of the cabinet, the Prime Minister, leading the country. Of course, there will be some who are unhappy with this..."
  CHI_restore_the_nation:0 "Restore the Nation"
  CHI_restore_the_nation_desc:0 "The Xinhai Revolution has wracked China to its core. All must do their part to mend and repair the nation."
  CHI_constitutional_monarchy:0 "Monarchy Reformation"
