--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -7105,7 +7105,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_russia.105.t:0 "Army Demobilization"
  ww1_russia.105.d:0 "With peace achieved, we can now demobilize the army. The internal threats to the revolution will be managed by the Red Guard. This marks a new phase in our struggle, as we shift focus to consolidating power and fortifying our ideology within Russia."
  ww1_russia.105.a:0 "Necessary means to reorganize the army."
- red_guard_mobilized_tt:0 "Disbands all existing army divisions and creates the Red Guards divisions."
+ red_guard_mobilized_tt:0 "\n§RDisbands§! all existing army divisions and creates §YRed Guards§! divisions. These can be upgraded within the §YRed Army§! branch of the focus tree."
  ww1_russia.106.t:0 "Defiance Against the Revolution"
  ww1_russia.106.d:0 "Ukraine has refused to accept the revolution, challenging our authority and ideology. Their defiance cannot go unanswered. We must respond decisively to enforce our vision and expand the reach of the Soviet influence in Eastern Europe."
  ww1_russia.106.a:0 "They shall perish under the revolution!"
