--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -3103,6 +3103,7 @@
  SOV_red_fleet_tt:0 "§RRevolutionary sailors can revolt§! if the Bolsheviks will weaken the fleet.\n\n"
  SOV_peoples_army:0 "People's Army"
  SOV_peoples_army_desc:0 "For an ideal army, soldiers should be able to elect their command. This will benefit the soldiers as they will be able to choose whoever they pick as an officer and it will be fast to prepare."
+ SOV_peoples_army_tt:0 "\nAdds two militia battalions to §YKrasnaya Gvardiya§!"
  SOV_pre_revolutionary_army_officers:0 "Pre-Revolutionary Army Officers"
  SOV_pre_revolutionary_army_officers_desc:0 "There are many talented officers from before the civil war, who can be integrated into our command. These officers will highly benefit us with their knowledge from throughout past wars."
  SOV_red_airfleet:0 "Red Airfleet"
@@ -3114,9 +3115,11 @@
  SOV_political_commissars_pre.tt:0 "If we have chosen §YPre-Revolutionary Army Officers§!:\nModify §YRed Army§! by\nDivision Organization: §G+10.0%§!"
  SOV_political_commisars_peoples.tt:0 "\nIf we have chosen §YPeople's Army§!:\nModify §YRed Army§! by\nDivision Organization: §G+10.0%§!\nDivision Attack: §G+5.0%§!"
  SOV_political_commissars_tt:0 "\nCompleting this focus and §YMilitary Academy§! or §YMilitary All-Education§! will prevent the §Rcollapse of  the army§!."
+ SOV_commissars_mp_tt:0 "\nAdds §YMilitary Police§! to §YKrasnaya Gvardiya§!"
  SOV_military_academy:0 "Military Academy"
  SOV_military_academy_desc:0 "We should form a military academy, to train new officers and to invent and keep up with the latest avancements in warfare, as it is constantly evolving with new tactics all the time."
  SOV_military_all_education:0 "Military All-Education"
+ SOV_military_academy_tt:0 "\nAdds §YEngineer Company§! to §YKrasnaya Gvardiya§!"
  SOV_military_all_education_desc:0 "We should keep up on inventions of all equipment used by our armies in war as if we have superior equipment we will be sure to win. We will make sure to focus our efforts on developing the most advanced equipment."
  SOV_reform_the_army:0 "Reform the Army"
  SOV_reform_the_army_desc:0 "With the civil war over in our great victory, we can finally come round to reforming the army. The army in the civil war consisted of many militias and lacked equipment, now we can solve these issues and make our army the greatest in the whole world."
@@ -3124,6 +3127,7 @@
  SOV_design_bureau_desc:0 ""
  SOV_artillery_god_of_war:0 "Artillery is the God of War!"
  SOV_artillery_god_of_war_desc:0 "As shown in the Great War, artillery is now one of the most important equipments in the modern age of warfare. We should make sure to be making the latest advancements in the field and crush our enemies under the shells!\n\n Artillery is the God of war!"
+ SOV_artillery_war_tt:0 "\nAdds §YSupport Artillery§! to §YKrasnaya Gvardiya§!"
  SOV_soviet_tanks:0 "Soviet Tanks"
  SOV_soviet_tanks_desc:0 ""
  SOV_comintern:0 "Comintern"
