--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1807,7 +1807,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  SER_under_military_rule:0 "Under Military Rule"
  SER_russian_protection:0 "Russian Protection"
  SER_russian_protection_desc:0 "Our relationship with Russia is special in that we are fellow Slavic and Orthodox nations. Russia values our geopolitical position, which stretches from the Balkans to the Mediterranean, so they will actively help us if we are in a crisis."
- SER_russian_protection_tt:0 "§Y[RUS.GetFlag]Russia§! would §Rjoin war§! when §Y[SER.GetFlag]Serbia§! is §Yat defensive war with a major country§!.\nIf either of both undergoes a political change that enough to break ties, this national spirit will disappear."
+ SER_russian_protection_tt:0 "§Y[RUS.GetFlag]Russia§! will §Rjoin any war§! where §Y[SER.GetFlag]Serbia§! finds itself on the defensive against a major nation.\n§RIf either country undergoes a significant political shift that severs their ties, this national spirit will be removed.§!"
  SER_scarred_nation:0 "Scarred Nation"
  SER_scarred_nation_desc:0 "Serbia suffered more than any other country in the Great War. Entire towns were depopulated, the country looted, hundreds of thousands died - and the ordinary Serb believes it was their fault."
 
