First part of the Political Tree

--- a/localisation/english/ww1_raj_l_english.yml
+++ b/localisation/english/ww1_raj_l_english.yml
@@ -537,6 +537,12 @@
  RAJ_denounce_south_africa:0 "Denounce South-Africa"
  RAJ_denounce_south_africa_desc:0 "Charles Hardinge has on several occasions expressed his disapproval of South Africa's anti-Indian laws, and it is time that our administration officially condemns the South African government to put its words into action."
  has_denounced_south_africa:0 "Has denounced South-Africa"
+ 
+ RAJ_introduce_registration_of_motor_vehicles:0 "Introduce Registration of Motor Vehicles"
+ RAJ_introduce_registration_of_motor_vehicles_reward:0 "Modify '§YTribal Raids§!' by:\nWeekly Manpower:§G +25§!\nConsumer Goods Factories Factor:§Y +1.5%§!\nCounter intelligence:§G +0.05§!"
+
+ RAJ_inland_vessels_act:0 "Inland Vessels Act"
+ RAJ_inland_vessels_act_reward:0 "Modify '§YTribal Raids§!' by:\nWeekly Manpower:§G +25§!\nConsumer Goods Factories Factor:§Y +1.5%§!\nCounter intelligence:§G +0.05§!"
 
  RAJ_bloated_legal_apparatus_remove:0 "Completing this decision is §Rnecessary§! to remove the ''§YBloated Legal Apparatus§!'' National Spirit.\n"
 
@@ -597,6 +603,15 @@
 
  RAJ_white_phosphorus_matches_prohibition_act:0 "White Phosphorus Matches Prohibition Act"
  RAJ_white_phosphorus_matches_prohibition_act_reward:0 "Modify '§YSocial Reforms§!' by:\nMonthly Population:§G +5.0%§!"
+
+ RAJ_hindu_disposition_of_property_act:0 "Hindu Disposition of Property Act"
+ RAJ_hindu_disposition_of_property_act_reward:0 "Modify '§YSocial Reforms§!' by:\nPolitical Power Gain:§G +2%§!\nStability:§G +4.00%§!"
+
+ RAJ_post_office_cash_certificates_act:0 "Post Office Cash Certificates Act"
+ RAJ_post_office_cash_certificates_act_reward:0 "Modify '§YSocial Reforms§!' by:\nConsumer Goods Factories Factor:§Y -4.0%§!\nStability:§G +4.00%§!"
+
+ RAJ_usurious_loans_act:0 "Usurious Loans Act"
+ RAJ_usurious_loans_act_reward:0 "Modify '§YSocial Reforms§!' by:\nConsumer Goods Factories Factor:§Y -4.0%§!\nConstruction Speed:§G +4.00%§!"
  
  # Survey of India
  RAJ_survey_of_india_category:0 "Survey of India"
@@ -990,9 +1005,6 @@ RAJ_indian_press_act_desc:0 "Following the Indian Press Act of 1908, radical nat
 RAJ_george_V_royal_tour:0 "George V Royal Tour"
 RAJ_george_V_royal_tour_desc:0 "With the recent coronation of George V, [RAJ.GetLeader] has expressed his wish to organise the third Delhi Durbar, the Indian imperial-style mass meeting held in Coronation Park, Delhi, to mark the succession of an Emperor or Empress of India. As well as being a symbol of our hold on the subcontinent, the Durbar is commonly used to announce new policies regarding the Raj. As such, organising it will help us set the course."
 
-
-
-
 # Pre-War Political Path + Reformist Path
 RAJ_foreign_and_political_department:0 "Foreign and Political Departments"
 RAJ_foreign_and_political_department_desc:0 ""
@@ -1008,6 +1020,7 @@ RAJ_criminal_tribes_act_reward:0 "Modify '§YTribal Raids§!' by:\nWeekly Manpow
 
 RAJ_introduce_vehicle_regulation:0 "Introduce Vehicle Regulations"
 RAJ_introduce_vehicle_regulation_desc:0 ""
+RAJ_introduce_vehicle_regulation_reward:0 "\nUnlocks Decisions:\n§Y£GFX_decision_icon_small Introduce Registration of Motor Vehicles\n§Y£GFX_decision_icon_small Inland Vessels Act"
 
 RAJ_indian_factories_act:0 "Indian Factories Act"
 RAJ_indian_factories_act_desc:0 ""
@@ -1024,6 +1037,7 @@ RAJ_government_of_india_act_1915_reward:0 "\nCompleting this focus will allow us
 
 RAJ_ensure_economic_independence_and_housing:0 "Ensure Native Economic Independence"
 RAJ_ensure_economic_independence_and_housing_desc:0 ""
+RAJ_ensure_economic_independence_and_housing_reward:0 "\nUnlocks Decisions:\n§Y£GFX_decision_icon_small Hindu Disposition of Property Act\n§Y£GFX_decision_icon_small Post Office Cash Certificates Act\n§Y£GFX_decision_icon_small Usurious Loans Act\n"
 
 RAJ_august_declaration:0 "August Declaration"
 RAJ_august_declaration_desc:0 ""
