started doing this shit

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1662,6 +1662,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  HUN_joseph_august:0 "József Ágost"
  HUN_karoly_huszar:0 "Károly Huszár"
  HUN_istvan_tisza:0 "István Tisza"
+ HUN_karoly_khuen_hedervary:0 "Károly Khuen-Héderváry"
 
  # HYDERABAD
  HYD_mahbub_ali_khan:0 "Mahbub Ali Khan"
