working on syrian education decisions

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -5983,6 +5983,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TRS_forced_labor_abolished:0 "Has not selected §YAbolish Forced Labor§!"
  TRS_utilize_forced_labor_tt: "Modify §YCemâl's Syria§! by\n£construction_speed_texticon  Construction Speed: §R-20.00%§!\n£factory_output_texticon  Factory Output: §R-20.00%§!\n\n"
  TRS_utilize_forced_labor_tt2: "Modify §YCemâl's Syria§! by\n£construction_speed_texticon  Construction Speed: §G+20.00%§!\n£factory_output_texticon  Factory Output: §G+20.00%§!\n\n"
+ TRS_establish_selahaddin_i_eyyubi_complex_tt:0 "Modify §YCrippling Illiteracy§! by\n£research_speed_texticon  Research Speed: §G+5.00%§!\n\n"
+ TRS_expand_french_educational_institutions_tt:0 "Modify §YCrippling Illiteracy§! by\n£research_speed_texticon  Research Speed: §G+5.00%§!\n(§Y[FRA.GetNameWithFlag]§!) £defence_texticon  Defense bonus against country: §R-10.0%§!\n\n"
+ TRS_orient_mission_of_austria_tt:0 "Modify §YCrippling Illiteracy§! by\n£research_speed_texticon  Research Speed: §G+5.00%§!\n(§Y[AUH.GetNameWithFlag]§!) £defence_texticon  Defense bonus against country: §R-10.0%§!\n\n"
 
  TUR_decision_cost_minority:0 "[TUR.turkeyminoritycost]"
  TUR_decision_cost_minority_blocked:0 "[TUR.turkeyminoritycostblocked]"
