--- a/localisation/russian/ww1_decisions_l_russian.yml
+++ b/localisation/russian/ww1_decisions_l_russian.yml
@@ -1284,6 +1284,7 @@
  SOV_send_ultimatum_to_Turkestan:0 "Отправить ультиматум государству [FROM.GetName]"
  SOV_crush_FROM_cossacks:0 "Сокрушить [FROM.GetAdjective]их казаков"
  SOV_recruit_militia_category:0 "Вербовка ополчения"
+ SOV_recruit_militia_category_desc:0 "В условиях, когда страна находится в состоянии войны, а ряды Красной Армии поредели, для защиты революции необходимо призвать местное ополчение. Эти добровольческие силы, спешно организованные из рабочих, крестьян и преданных членов партии, укрепят нашу фронтовую оборону и обеспечат безопасность ключевых районов. Несмотря на отсутствие формальной подготовки и снаряжения у регулярных солдат, их несокрушимый революционный дух будет подпитывать их борьбу за защиту Родины.\n\nПо мере нарастания Гражданской войны можно набирать все больше ополченцев."
  SOV_recruit_militia:0 "Поднять ополчение в [FROM.getName]"
  SOV_recruiting_militia: "Уже набирает ополчение"
  possible_soviet_militia_recruitment:0 "Возможность набора в ополчение"
