--- a/localisation/russian/ww1_ideas_l_russian.yml
+++ b/localisation/russian/ww1_ideas_l_russian.yml
@@ -594,7 +594,7 @@
  idea_ita_boys_of_99:0 "Ragazzi del '99"
  idea_protect_ports:0 "Портовые укрепления"
  idea_italy_MAS_boat:0 "Motoscafo Armato Silurante"
- idea_italy_MAS_boat_desc:0 "Моторные катера с торпедным вооружением (MAS) - главное достижение раннего итальянского судостроения. Они эффективны в борьбе с подводными лодками, охране побережья и сопровождении конвоев, а также дредноутов."
+ idea_italy_MAS_boat_desc:0 "Моторные катера с торпедным вооружением («MAS») - главное достижение раннего итальянского судостроения. Они эффективны в борьбе с подводными лодками, охране побережья и сопровождении конвоев, а также дредноутов."
  ITA_idea_tribunale_speciale:0 "ОНАП"
  ITA_idea_italian_autarky:0 "Итальянская Автаркия"
  ITA_idea_mafia:0 "Могущественная мафия"
