--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -661,6 +661,15 @@
  VICTORY_POINTS_13061: "Kırkkilise"
  VICTORY_POINTS_890: "Adapazarı"
  VICTORY_POINTS_10921: "Laasqoray"
+ VICTORY_POINTS_4110: "Hyderabad"
+ VICTORY_POINTS_10735: "Shikarpur"
+ VICTORY_POINTS_7938: "Allahabad"
+ VICTORY_POINTS_8022: "Rawalpindi"
+ VICTORY_POINTS_10843: "Bahawalpur"
+ VICTORY_POINTS_4915: "Agra"
+ VICTORY_POINTS_12338: "Jalpaiguri"
+ VICTORY_POINTS_9973: "Gorakhpur"
+ VICTORY_POINTS_10772: "Ferozepore"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
