--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -7712,12 +7712,13 @@ FRA_ww1_cartel_des_droites_desc:0 "The union of the French right is a reality wh
 
  FRA_ww1_camelots_du_roi:0 "Camelots du Roi"
  FRA_ww1_camelots_du_roi_desc:0 "The return of the monarchist system has awakened new passions in France, volunteers from all over the nation show up in the barracks to serve [FRA.getLeader] and his army."
-
+ROM_anti_populist_campaigns:0 "Discredit Populism"
  FRA_ww1_seek_rapprochement_with_spain:0 "Seek Rapprochement with Spain"
  FRA_ww1_seek_rapprochement_with_spain_desc:0 "Our new political alignment could convince Spain, very weakened by its recent conflicts against the United States, to align itself with us. This ally would be a godsend for the security of our southern front in Africa and the demographic reinforcement of our armies."
 gala_galaction:0 "Gala Galaction"
  FRA_ww1_british_friendship:0 "British Friendship"
  FRA_ww1_british_friendship_desc:0 "Despite our history, which is opposed by everything, Great Britain remains one of our rare strong allies in the face of German hegemony. We must strengthen our ties with her and secure our alliance."
+ROM_prevent_a_brain_drain:0 "Prevent a Brain Drain"
 ROM_cooperative_agriculture_idea:0 "Cooperative Agriculture"
  FRA_ww1_support_serbia:0 "Support Serbia"
  FRA_ww1_support_serbia_desc:0 "The Austro-Hungarian Empire has shown clear signs of hostility and aggression towards our only cordial partner in the Balkans. Let us strengthen our ties with the Serbs."
