--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -7718,6 +7718,10 @@ ROM_anti_populist_campaigns:0 "Discredit Populism"
 gala_galaction:0 "Gala Galaction"
  FRA_ww1_british_friendship:0 "British Friendship"
  FRA_ww1_british_friendship_desc:0 "Despite our history, which is opposed by everything, Great Britain remains one of our rare strong allies in the face of German hegemony. We must strengthen our ties with her and secure our alliance."
+ROM_a_pefect_puppet:0 "A Perfect Puppet"
+ww1_romania.57.t:0 "Germany Installs Petre Carp as Puppet Leader"
+ww1_romania.57.d:0 "With no formal surrender from the King, Germany has appointed Petre Carp to form a new puppet government in Bucharest. Already, German soldiers are beginning to withdraw as they tranfer controll of the country to the new civilian government. A trustworthy Germophile, Petre Carp should serve Germany's interests in us perfectly"
+ww1_romania.57.a:0 "If you can't beat them, join them!"
 ROM_prevent_a_brain_drain:0 "Prevent a Brain Drain"
 ROM_cooperative_agriculture_idea:0 "Cooperative Agriculture"
  FRA_ww1_support_serbia:0 "Support Serbia"
