--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5150,7 +5150,7 @@ ROM_a_man_from_junimea:0 "A Man From Junimea"
 ROM_a_man_from_junimea_desc:0 ""
 ROM_harmonization_of_romanian_society:0 "Harmonisation of Romanian Society"
 ROM_harmonization_of_romanian_society_desc:0 ""
-ROM_geniocracy:0 "An Government of Intellectuals"
+ROM_geniocracy:0 "A Government of Intellectuals"
 ROM_geniocracy_desc:0 ""
 ROM_new_elitism:0 "New Elitism"
 ROM_new_elitism_desc:0 ""
